--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
     "@dnd-kit/utilities": "^3.2.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
-    "daisyui": "^5.5.11",
-    "next": "16.0.8",
+    "daisyui": "^4.12.10",
+    "next": "14.2.16",
     "next-auth": "^4.24.13",
     "pg": "^8.16.3",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
-    "recharts": "^3.5.1"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.8",
-    "tailwindcss": "^4"
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.16",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
