--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pg": "^8.16.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
