--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "daisyui": "^4.12.10",
     "next": "14.2.16",
     "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
