--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.6",
+    "@mui/x-date-pickers": "^8.22.0",
     "bcryptjs": "^3.0.3",
+    "csv-parser": "^3.2.0",
     "daisyui": "^4.12.10",
+    "dayjs": "^1.11.19",
+    "dotenv": "^17.2.3",
     "next": "14.2.16",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
     "react": "18.3.1",
+    "react-day-picker": "^9.12.0",
     "react-dom": "18.3.1",
     "recharts": "^2.12.7",
     "sharp": "^0.34.5"
