--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.948.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -28,6 +29,7 @@
     "react": "18.3.1",
     "react-day-picker": "^9.12.0",
     "react-dom": "18.3.1",
+    "react-google-recaptcha-v3": "^1.11.0",
     "recharts": "^2.12.7",
     "sharp": "^0.34.5"
   },
