--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "daisyui": "^4.12.10",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
-    "next": "14.2.16",
+    "next": "^14.2.16",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
